--- a/cursoemvideo/eventos-dom/aula9.html
+++ b/cursoemvideo/eventos-dom/aula9.html
@@ -18,7 +18,7 @@
     </style>
 </head>
 <body>
-    <h1>Bora práticas eventos DOM!</h1> 
+    <h1>Bora práticar eventos DOM!</h1> 
     <p>Esse é o primeiro parágrafo.</p>
     <div id="area">
         Interaja aqui!
