--- a/cursoemvideo/index.html
+++ b/cursoemvideo/index.html
@@ -14,6 +14,13 @@
         <section>
             <p>Aqui você encontrará alguns conteúdos e projetos que desenvolvi ao longo do curso de JavaScript e EcmaScript do canal Curso em Vídeo, onde as aulas são ministradas pelo mestre Gustavo Guanabara.</p>
         </section>
+        <section>
+            <ul>
+                <li><a href="calculadora.html">Calculadora</a></li>
+                <li><a href="multas.html">Sistemas de Multas</a></li>
+                <li><a href="pais.html">Validação de Nacionalidade</a></li>
+            </ul>
+        </section>
     </main>
     <footer>
         <p><a href="https://github.com/jucox" target="_blank">@jucox</a> | Renato Lins Jr.</p>
