--- a/cursoemvideo/index.html
+++ b/cursoemvideo/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Curso de JavaScript e EcmaScript6 - Curso em Vídeo</h1>
+        <h1>Curso de JavaScript e EcmaScript - Curso em Vídeo</h1>
     </header>
     <main>
         <section>
